v1.5

Extension

* Clean-up and streamline the text tagging code
* Process sub FRAMEs and IFRAMEs looking for text boxes
* Handle textareas that have been "cloned" by Javascript - fixes Google Groups
* Generate user feedback if "edit focused area" failed
* Skip textareas with spell-checking disabled (usually email address boxes)
* Updates to help text in Options

edit-server.el

* Allow more customisation of the pop-up frame
* Allow optional binding to a non-local IP address
* Updates to help text in server code.

v1.4

Extension

* Added proper Emacs icon for extension
* Added options page with instructions and option to change port
* Allow a simple status test to be run in the options page
* Change mouse cursor when hovering over edit button
* Double click on a text area invokes the editor

edit-server.el

* edit-server.el now distributed in-situ with the extension
* Renamed edit_server to edit-server to follow conventions
* Stopped C-x C-c from shutting down session (leaving stale TEXTAREA)
* Added default size and name to new frames
* Clear modification indication on new edit buffers